Fix alignment of content within buttons so it never goes beyond natural height.

--- a/components/button/button.styl
+++ b/components/button/button.styl
@@ -120,6 +120,7 @@ button-variant( background, color, icon-color, addon-color, outline-color, outli
 
 	.jolticon
 		cursor: pointer
+		vertical-align: middle
 		line-height: $button-line-height
 		margin: 0 $button-icon-spacing-right 0 0
 
@@ -129,6 +130,7 @@ button-variant( background, color, icon-color, addon-color, outline-color, outli
 	small
 		font-weight: normal
 		font-size: $font-size-tiny
+		vertical-align: middle
 
 /**
  * Disabled State
